More coding with flex box

--- a/3 flexbox-grid/css/flexbox.css
+++ b/3 flexbox-grid/css/flexbox.css
@@ -110,4 +110,11 @@ div img {
     flex: 0 0 44%;
     order: 0;
   }
+  .reverse {
+    flex-direction: row-reverse;
+  }
+  .reverse [class*="col-1"] {
+    margin-left: 0%;
+    margin-right: 4%;
+  }
 }
